--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/animations": "^8.0.0",
-    "bootstrap": "3.3.7",
+    "bootstrap": "4.3.1",
     "core-js": "^3.1.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
@@ -42,8 +42,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.0",
-    "ts-node": "~8.1.0",
-    "tslint": "~5.11.0",
-    "typescript": "^3.4.5"
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "3.4.5"
   }
 }
